[package]
name = "slay_the_spire"
version = "0.1.0"
edition = "2024"
authors = ["shuwa"]

[dependencies]
rand = "0.9.1"
clap = { version = "4.5", features = ["derive"] }
bevy = { version = "0.15", default-features = false, features = ["bevy_ui", "bevy_render", "bevy_core_pipeline", "bevy_text", "bevy_sprite", "bevy_winit", "bevy_window", "x11", "png", "default_font"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ordered-float = { version = "4.2", features = ["serde"] }
